# cloudflare-prometheus-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  codecov.yml  commitlint.config.js  commitlint.config.mjs  index.html  index.yaml  justfile  pyproject.toml  pytest.ini  renovate.json
.github/: branch-protection.yml
.github/workflows/: code-quality.yml  codeql.yml  commit-linter.yml  dockerhub-description.yml  publish-helm-chart.yml  release-chart.yml  release.yml  scorecard.yml  security.yml  tests.yml  zizmor.yml
cloudflare_exporter/: __init__.py  cloudflare_exporter.py  cloudflare_setup.py  config.py  logger.py  main.py  metrics.py  setup.py
cloudflare_exporter/queries/: cdnNetworkAnalyticsAdaptiveGroups.gql  dnsAnalyticsAdaptiveGroups.gql  dosdNetworkAnalyticsAdaptiveGroups.gql  firewallEventsAdaptiveGroups.gql  httpRequestsOverviewAdaptiveGroups.gql  warpDeviceAdaptiveGroups.gql
helm/cloudflare-prometheus-exporter/: Chart.yaml  values.yaml
helm/cloudflare-prometheus-exporter/templates/: _helpers.tpl  deployment.yaml  service.yaml  servicemonitor.yaml
tests/: conftest.py
tests/integration/: test_exporter_integration.py
tests/unit/: test_cloudflare_exporter.py  test_cloudflare_setup.py  test_config.py  test_logger.py  test_main.py  test_metrics.py
