[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-prometheus-exporter"
version = "0.2.0"
description = "A Prometheus exporter for Cloudflare Analytics metrics"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Krzysztof Kołodziejczyk", email = "k.kolodziejczyk3@gmail.com"},
]
dependencies = [
    "cloudflare==4.3.1",
    "prometheus-client==0.24.1",
    "python-dotenv==1.2.2",
    "python-json-logger==4.0.0",
    "requests==2.33.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]

[tool.setuptools]
packages = ["cloudflare_exporter"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pyright==1.1.408",
    "bandit==1.9.4",
    "ruff==0.15.8",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "cloudflare_exporter/__init__.py:__version__",
    "helm/cloudflare-prometheus-exporter/Chart.yaml:appVersion",
]
allow_zero_version = true
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install uv && uv lock"
commit_message = "chore(release): bump version to {version}"

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = ["E", "W", "F", "B", "I", "N", "UP", "PL", "RUF", "SIM", "PTH", "DTZ", "C4", "A"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cloudflare_exporter --cov-report=term-missing"
